@@ -7,5 +7,5 @@ if %errorlevel% neq 0 (
     exit /b 1
 )
 echo Starting StockWise Inventory Management System...
-java --module-path target\lib --add-modules javafx.controls,javafx.fxml -jar target\stockwise-1.0-SNAPSHOT-shaded.jar
+mvn javafx:run
 pause
